--- a/Roland/requirements.txt
+++ b/Roland/requirements.txt
@@ -4,6 +4,7 @@ dj-static==0.0.6
 django-oauth2-provider==0.2.6.1
 django-toolbelt==0.0.1
 gunicorn==19.0.0
+newrelic==2.34.0.29
 psycopg2==2.5.3
 requirements==0.1
 shortuuid==0.4.2
